--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "REST API for Vehicle value",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "start-dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,13 @@
   "bugs": {
     "url": "https://github.com/vishalcoderathore/VehicleValue_REST_API/issues"
   },
-  "homepage": "https://github.com/vishalcoderathore/VehicleValue_REST_API#readme"
+  "homepage": "https://github.com/vishalcoderathore/VehicleValue_REST_API#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "*",
+    "express": "*"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
+  }
 }
